add option to import profile into gameinfo