@@ -21,12 +21,15 @@ package org.ligi.gobandroid_hd.ui.alerts;
 
 import org.ligi.android.common.dialogs.DialogDiscarder;
 import org.ligi.gobandroid_beta.R;
+import org.ligi.gobandroid_hd.GobandroidApp;
 import org.ligi.gobandroid_hd.logic.GoGame;
 import org.ligi.gobandroid_hd.ui.GobandroidDialog;
 
 import android.app.AlertDialog;
 import android.content.Context;
 import android.content.DialogInterface;
+import android.view.View;
+import android.widget.Button;
 import android.widget.EditText;
 
 /**
@@ -45,12 +48,16 @@ public class GameInfoAlert extends GobandroidDialog {
 		setIconResource(R.drawable.info);
 		setContentView(R.layout.game_info);
 
+		final GobandroidApp app=(GobandroidApp)context.getApplicationContext();
+		
+
 		final EditText game_name_et = (EditText) findViewById(R.id.game_name_et);
 		game_name_et.setText(game.getMetaData().getName());
 
 		final EditText black_name_et = (EditText) findViewById(R.id.black_name_et);
 		black_name_et.setText(game.getMetaData().getBlackName());
 
+		
 		final EditText black_rank_et = (EditText) findViewById(R.id.black_rank_et);
 		black_rank_et.setText(game.getMetaData().getBlackRank());
 
@@ -65,7 +72,41 @@ public class GameInfoAlert extends GobandroidDialog {
 
 		final EditText game_result_et = (EditText) findViewById(R.id.game_result_et);
 		game_result_et.setText(game.getMetaData().getResult());
+		
+		final Button user_is_white_btn=(Button)findViewById(R.id.user_is_white_btn);
+		
+		if (!game.getMetaData().getWhiteName().equals(""))
+			user_is_white_btn.setVisibility(View.GONE);
+		
+		final Button user_is_black_btn=(Button)findViewById(R.id.user_is_black_btn);
+		
+		if (!game.getMetaData().getBlackName().equals(""))
+			user_is_black_btn.setVisibility(View.GONE);
+		
+		user_is_black_btn.setOnClickListener(new View.OnClickListener() {
 
+			@Override
+			public void onClick(View v) {
+				black_name_et.setText(app.getSettings().getUsername());
+				black_rank_et.setText(app.getSettings().getRank());
+				user_is_black_btn.setVisibility(View.GONE);
+			}
+			
+		});
+		
+		user_is_white_btn.setOnClickListener(new View.OnClickListener() {
+
+			@Override
+			public void onClick(View v) {
+				white_name_et.setText(app.getSettings().getUsername());
+				white_rank_et.setText(app.getSettings().getRank());
+				user_is_white_btn.setVisibility(View.GONE);
+			}
+			
+		});
+		
+		
+		
 		class SaveChangesOnClick implements DialogInterface.OnClickListener {
 			public void onClick(DialogInterface dialog, int whichButton) {
 				game.getMetaData().setName(game_name_et.getText().toString());
@@ -75,7 +116,7 @@ public class GameInfoAlert extends GobandroidDialog {
 				game.getMetaData().setWhiteRank(white_rank_et.getText().toString());
 
 				try {
-					game.setKomi(new Float(game_komi_et.getText().toString()));
+					game.setKomi(Float.valueOf(game_komi_et.getText().toString()));
 				} catch (NumberFormatException ne) {
 					new AlertDialog.Builder(context).setMessage(R.string.komi_must_be_a_number).setPositiveButton(android.R.string.ok, new DialogDiscarder()).setTitle(R.string.problem).show();
 					return;
